Updated dependencies from JavaEE to JakartaEE and Kotlin Version
The changes were required due to the deprecation of JavaEE in favour of JakartaEE. The restful Web services are now using updated libraries which led to code adaptation for API changes. Additionally, the Kotlin dependencies were upgraded from version 1.3.71 to 1.9.0. Code reformatting was done for better readability and maintainability following the project's coding standards.